 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".EditBioActivity" >
	   
		    <EditText android:id="@+id/editName"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="textCapSentences"
		        android:hint="@string/editName"/>
		    
		    <EditText android:id="@+id/editTitle"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/editName"
		        android:inputType="textCapSentences"
		        android:hint="@string/editTitle"/>
		    
		    <EditText android:id="@+id/editRace"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/editTitle"
		        android:inputType="textCapSentences"
		        android:hint="@string/editRace"/>
		    
		    <EditText android:id="@+id/editClass"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/editRace"
		        android:inputType="textCapSentences"
		        android:hint="@string/editClass"/>
		    
		    <EditText android:id="@+id/editLevel"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/editClass"
		        android:inputType="number"
		        android:hint="@string/editLevel"/>
		    
		    <EditText android:id="@+id/editExp"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/editLevel"
		        android:inputType="number"
		        android:hint="@string/editExp"/>
		    
		    <EditText android:id="@+id/editNextLevel"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/editExp"
		        android:inputType="number"
		        android:hint="@string/editNextLevel"/>
		    
		    <EditText android:id="@+id/editPath"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/editNextLevel"
		        android:inputType="textCapSentences"
		        android:hint="@string/editPath"/>
		    
		    <EditText android:id="@+id/editDestiny"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/editPath"
		        android:inputType="textCapSentences"
		        android:hint="@string/editDestiny"/>
		    
		    <EditText android:id="@+id/editGender"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/editDestiny"
		        android:inputType="textCapSentences"
		        android:hint="@string/editGender"/>
		    
		    <EditText android:id="@+id/editAge"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/editGender"
		        android:inputType="number"
		        android:hint="@string/editAge"/>
		    
		    <EditText android:id="@+id/editSize"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/editAge"
		        android:inputType="textCapSentences"
		        android:hint="@string/editSize"/>
		    
		    <EditText android:id="@+id/editHeight"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/editSize"
		        android:inputType="textCapSentences"
		        android:hint="@string/editHeight"/>
		    
		    <EditText android:id="@+id/editWeight"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/editHeight"
		        android:inputType="textCapSentences"
		        android:hint="@string/editWeight"/>
		    
		    <EditText android:id="@+id/editAlignment"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/editWeight"
		        android:inputType="textCapSentences"
		        android:hint="@string/editAlignment"/>
		    
		    <EditText android:id="@+id/editDeity"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/editAlignment"
		        android:inputType="textCapSentences"
		        android:hint="@string/editDeity"/>
		    
		    <EditText android:id="@+id/editLanguages"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/editDeity"
		        android:inputType="textCapSentences|textMultiLine"
		        android:hint="@string/editLanguages"/>
		    
		    <EditText android:id="@+id/editBackground"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/editLanguages"
		        android:inputType="textCapSentences|textMultiLine"
		        android:hint="@string/editBackground"/>
		    
		    <EditText android:id="@+id/editPersonality"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/editBackground"
		        android:inputType="textCapSentences|textMultiLine"
		        android:hint="@string/editPersonality"/>
	
	   	</RelativeLayout>
	    
</ScrollView>
