<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditDefenseActivity" >

    <TextView android:id="@+id/editDefenseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
        android:textSize="27sp" />
    
    <EditText android:id="@+id/editDefenseConditionals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editDefenseName"
        android:hint="@string/editDefenseConditionals"
        android:inputType="textMultiLine"/>
    
    <LinearLayout android:id="@+id/tenPlus"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/editDefenseConditionals">
	    
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="right"
	        android:layout_weight="1"
	        android:text="@string/editDefense10Plus"
	        android:textSize="16sp"/>
	    
	    <EditText android:id="@+id/editDefenseTenPlus"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:layout_weight="1"
	        android:inputType="numberSigned" />
	    
	</LinearLayout>
	
    <LinearLayout android:id="@+id/AbilArmor"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/tenPlus">
	    
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="right"
	        android:layout_weight="1"
	        android:text="@string/editDefenseAbilArmor"
	        android:textSize="16sp"/>
	    
	    <EditText android:id="@+id/editDefenseAbilArmor"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:layout_weight="1"
	        android:inputType="numberSigned" />
	    
	</LinearLayout>
	
    <LinearLayout android:id="@+id/clss"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/AbilArmor">
	    
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="right"
	        android:layout_weight="1"
	        android:text="@string/editDefenseClass"
	        android:textSize="16sp"/>
	    
	    <EditText android:id="@+id/editDefenseClass"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:layout_weight="1"
	        android:inputType="numberSigned" />
	    
	</LinearLayout>
	
    <LinearLayout android:id="@+id/feat"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/clss">
	    
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="right"
	        android:layout_weight="1"
	        android:text="@string/editDefenseFeat"
	        android:textSize="16sp"/>
	    
	    <EditText android:id="@+id/editDefenseFeat"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:layout_weight="1"
	        android:inputType="numberSigned" />
	    
	</LinearLayout>
	
    <LinearLayout android:id="@+id/enh"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/feat">
	    
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="right"
	        android:layout_weight="1"
	        android:text="@string/editDefenseEnh"
	        android:textSize="16sp"/>
	    
	    <EditText android:id="@+id/editDefenseEnh"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:layout_weight="1"
	        android:inputType="numberSigned" />
	    
	</LinearLayout>
	
    <LinearLayout android:id="@+id/misc"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/enh">
	    
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="right"
	        android:layout_weight="1"
	        android:text="@string/editDefenseMisc"
	        android:textSize="16sp"/>
	    
	    <EditText android:id="@+id/editDefenseMisc"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:layout_weight="1"
	        android:inputType="numberSigned" />
	    
	</LinearLayout>

</RelativeLayout>
