<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditInitiativeActivity" >

    <TextView android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:text="@string/editInitName"
        android:textSize="27sp" />
	
	<LinearLayout android:id="@+id/dexMod"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/name">
	    
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="right"
	        android:layout_weight="1"
	        android:text="@string/editInitDexMod"
	        android:textSize="16sp"/>
	    
	    <EditText android:id="@+id/editInitDexMod"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:layout_weight="1"
	        android:inputType="numberSigned" />
	    
	</LinearLayout>
        
	<LinearLayout android:id="@+id/halfLevel"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/dexMod">
	    
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="right"
	        android:layout_weight="1"
	        android:text="@string/editInitHalfLevel"
	        android:textSize="16sp" />
	    
	    <EditText android:id="@+id/editInitHalfLevel"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:layout_weight="1"
	        android:inputType="number"/>
	    
	</LinearLayout>
	
	<LinearLayout android:id="@+id/miscMod"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/halfLevel">
	    
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="right"
	        android:layout_weight="1"
	        android:text="@string/editInitMiscMod"
	        android:textSize="16sp" />
	    
	    <EditText android:id="@+id/editInitMiscMod"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:layout_weight="1"
	        android:inputType="numberSigned"/>
	    
	</LinearLayout>
	
	<LinearLayout android:id="@+id/dieRoll"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/miscMod">
	    
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="right"
	        android:layout_weight="1"
	        android:text="@string/editInitDieRoll"
	        android:textSize="16sp" />
	    
	    <EditText android:id="@+id/editInitDieRoll"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:layout_weight="1"
	        android:inputType="number"/>
	    
	</LinearLayout>

</RelativeLayout>
